# technopark_C-Cpp_IZ_1

./: .travis.yml  CMakeLists.txt  README.md
linters/: run.sh
project/include/: word.h
project/src/: main.c
project/word_lib/: word.c
tests/: test.cpp
tests/input_emulator/: f1  f2  f3
